--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-fuck you 
+Buzzwoofers Wiki
+https://buzzwoofers.fandom.com/wiki/
 
-goanimate gonads v1 
+Buzzwoofers YouTube
+https://www.youtube.com/buzzwoofers?sub_confirmation=1
+
+Rooster Roosie YouTube
+https://www.youtube.com/UCZw0ta_vrFBeycTLVvG3jGw?sub_confirmation=1
